--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/damiramirez/node-ecommerce/issues"
   },
-  "homepage": "https://github.com/damiramirez/node-ecommerce#readme"
+  "homepage": "https://github.com/damiramirez/node-ecommerce#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
